bnx2 request_firmware applies happily again
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13219 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.1
+++ b/linux-2.6/debian/patches/series/1~experimental.1
@@ -6,7 +6,7 @@
 + debian/drivers-ata-ata_piix-postpone-pata.patch
 + debian/drivers-ata-pata_sis-postpone-pata.patch
 
-#+ debian/dfsg/drivers-net-bnx2-request_firmware-1.patch
++ debian/dfsg/drivers-net-bnx2-request_firmware-1.patch
 + features/all/drivers-gpu-drm-mga-request_firmware.patch
 + features/all/drivers-gpu-drm-r128-request_firmware.patch
 + features/all/drivers-gpu-drm-radeon-request_firmware.patch
