arm: fix sheevaplug patch to apply
305b07680f6c6a7e59f996c5bd85f009caff5bb1 added sheevaplug to mach-types
no need to patch it.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13220 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.1
+++ b/linux-2.6/debian/patches/series/1~experimental.1
@@ -32,10 +32,10 @@
 + features/arm/mv-sdio.patch
 + features/arm/kw-register-sdio.patch
 + features/arm/kw-register-internal-devices.patch
-#+ features/arm/kw-sheevaplug.patch
-#+ features/arm/kw-sheevaplug-usb-power.patch
-#+ features/arm/kw-sheevaplug-led.patch
++ features/arm/kw-sheevaplug.patch
++ features/arm/kw-sheevaplug-usb-power.patch
++ features/arm/kw-sheevaplug-led.patch
 + features/arm/kw-hook-up-i2c.patch
-#+ features/arm/kw-dont-init-rtc.patch
++ features/arm/kw-dont-init-rtc.patch
 + features/arm/kw-consistency-mpp.patch
 #+ features/arm/ts219.patch
