make ts219.patch apply cleanly
enable prepared patch hunk for arch/arm/tools/mach-types

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13221 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.1
+++ b/linux-2.6/debian/patches/series/1~experimental.1
@@ -38,4 +38,4 @@
 + features/arm/kw-hook-up-i2c.patch
 + features/arm/kw-dont-init-rtc.patch
 + features/arm/kw-consistency-mpp.patch
-#+ features/arm/ts219.patch
++ features/arm/ts219.patch
