topconfig enable modular DNET
got added on 4796417417a62e2ae83d92cb92e1ecf9ec67b5f5

amd64 config now clean again.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13223 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -30,7 +30,7 @@ linux-2.6 (2.6.29-1~experimental.1) UNRELEASED; urgency=low
     BTRFS_FS_POSIX_ACL, ATM_SOLOS, MFD_PCF50633, PCF50633_ADC, PCF50633_GPIO,
     REGULATOR_PCF50633, DVB_S921, EDAC_I5400, RTC_DRV_PCF50633,
     INPUT_PCF50633_PMU, CHARGER_PCF50633, DEVPTS_MULTIPLE_INSTANCES,
-    SCHED_OMIT_FRAME_POINTER, DCB, IXGBE_DCB, SFC_MTD, BE2NET.
+    SCHED_OMIT_FRAME_POINTER, DCB, IXGBE_DCB, SFC_MTD, BE2NET, DNET.
   * topconfig enable SND_HDA_HWDEP for sound debugging purpose.
   * topconfig enable USB_HIDDEV (closes: #517771)
   * [x86] set DELL_LAPTOP, COMEDI, X86_PTRACE_BTS, XENFS, XEN_COMPAT_XENFS,
