--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-kbuild-2.6 (2.6.29-1) UNRELEASED; urgency=low
   * New upstream version. 
   * Autogenerate list of supported options in modpost. (closes: #518961)
     - Build-depend against python.
+  * Use debhelper compat level 7.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 22 Feb 2009 14:04:24 +0100
 
