debian/changelog: Prepare to release (2.6.29-1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13259 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,11 +1,11 @@
-linux-kbuild-2.6 (2.6.29-1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.29-1) unstable; urgency=low
 
   * New upstream version. 
   * Autogenerate list of supported options in modpost. (closes: #518961)
     - Build-depend against python.
   * Use debhelper compat level 7.
 
- -- Bastian Blank <waldi@debian.org>  Sun, 22 Feb 2009 14:04:24 +0100
+ -- Bastian Blank <waldi@debian.org>  Thu, 26 Mar 2009 12:54:47 +0100
 
 linux-kbuild-2.6 (2.6.28-1) unstable; urgency=low
 
