--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
+
+  * Removing et131x, module went mainline.
+
+ -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:45:00 +0100
+
 linux-modules-extra-2.6 (2.6.26-6) unstable; urgency=medium
 
   * Disable btrfs.
