--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
   * Removing et131x, module went mainline.
   * Removing gspca, module went mainline.
   * Removing squashfs, module went mainline.
+  * Removing unionfs, in favour for aufs not supported anymore.
 
  -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:45:00 +0100
 
