--- a/linux-modules-contrib-2.6/debian/changelog
+++ b/linux-modules-contrib-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-modules-contrib-2.6 (2.6.29-1) unstable; urgency=low
 
   * Enabling open-vm.
+  * Re-enabling rt73 on vserver.
 
  -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:52:00 +0100
 
