--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-nonfree-2.6 (2.6.29-1) unstable; urgency=low
+
+  * Removing unicorn, not part of debian anymore.
+
+ -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:54:00 +0100
+
 linux-modules-nonfree-2.6 (2.6.26-2) unstable; urgency=medium
 
   * Triggering rebuild against fglrx manually, Luks binNMU didn't work out.
