--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.29-1~experimental.2) UNRELEASED; urgency=low
+
+  * [sparc] Enable BLK_DEV_CRYPTOLOOP. (closes: #521829)
+
+ -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
+
 linux-2.6 (2.6.29-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
