--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,5 +1,6 @@
 linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
 
+  * Removing btrfs, module went mainline.
   * Removing et131x, module went mainline.
   * Removing gspca, module went mainline.
   * Removing squashfs, module went mainline.
