--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -5,6 +5,8 @@ linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
   * Removing gspca, module went mainline.
   * Removing squashfs, module went mainline.
   * Removing unionfs, in favour for aufs not supported anymore.
+  * Adding batman-adv module, thanks to Sven Eckelmann <sven.eckelmann@gmx.de>
+    (Closes: #514611).
 
  -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:45:00 +0100
 
