--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -7,6 +7,8 @@ linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
   * Removing unionfs, in favour for aufs not supported anymore.
   * Adding batman-adv module, thanks to Sven Eckelmann <sven.eckelmann@gmx.de>
     (Closes: #514611).
+  * Adding batmand-gateway module, thanks to Sven Eckelmann
+    <sven.eckelmann@gmx.de> (Closes: #521535).
 
  -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:45:00 +0100
 
