--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -9,6 +9,8 @@ linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
     (Closes: #514611).
   * Adding batmand-gateway module, thanks to Sven Eckelmann
     <sven.eckelmann@gmx.de> (Closes: #521535).
+  * Disabling iscsitarget, doesn't build with 2.6.29.
+  * Disabling redhat-cluster, doesn't build with 2.6.29.
 
  -- Daniel Baumann <daniel@debian.org>  Thu, 26 Mar 2009 22:45:00 +0100
 
