--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-extra-2.6 (2.6.29-2) unstable; urgency=low
+
+  * Enabling batman-adv (Closes: #514611).
+
+ -- Daniel Baumann <daniel@debian.org>  Tue, 14 Apr 2009 21:07:00 +0200
+
 linux-modules-extra-2.6 (2.6.29-1) unstable; urgency=low
 
   * Removing btrfs, module went mainline.
