--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-modules-extra-2.6 (2.6.29-2) unstable; urgency=low
 
   * Enabling batman-adv (Closes: #514611).
+  * Enabling batmand-gateway (Closes: #521535).
 
  -- Daniel Baumann <daniel@debian.org>  Tue, 14 Apr 2009 21:07:00 +0200
 
