--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,7 +16,7 @@ linux-2.6 (2.6.30~rc3-1~experimental.1) UNRELEASED; urgency=low
     USB_GSPCA_SQ905C, USB_PWC_INPUT_EVDEV, DVB_USB_CE6230, SND_INDIGOIOX,
     SND_INDIGODJX, USB_SERIAL_CP210X, USB_SERIAL_QUALCOMM,
     USB_SERIAL_SYMBOL, ISL29003, SERIAL_MAX3100, VIDEO_HDPVR, VIDEO_CX231XX,
-    DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085.
+    DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085, LEDS_BD2802.
 
   [ Ben Hutchings ]
   * Remove firmware from driver/staging (closes: #521553)
