--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-extra-2.6 (2.6.29-3) unstable; urgency=low
+
+  * Disabling drbd8 on powerpc and sparc due to FTBFS.
+
+ -- Daniel Baumann <daniel@debian.org>  Thu, 23 Apr 2009 10:49:00 +0200
+
 linux-modules-extra-2.6 (2.6.29-2) unstable; urgency=low
 
   * Enabling batman-adv (Closes: #514611).
