--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -30,6 +30,7 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
   * Add patches from git.marvell.com:
     - allow for alternative __copy_to_user/__clear_user implementations
     - alternative copy_to_user/clear_user implementation copy_user
+  * [mipsel/r5k-cobalt] Enable SCSI_SYM53C8XX_2 (closes: #526836).
 
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
