topconfig enable POHMELFS
landed in staging somehow..

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13553 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,7 +17,8 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
     SND_INDIGODJX, USB_SERIAL_CP210X, USB_SERIAL_QUALCOMM,
     USB_SERIAL_SYMBOL, ISL29003, SERIAL_MAX3100, VIDEO_HDPVR, VIDEO_CX231XX,
     DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085, LEDS_BD2802,
-    UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV.
+    UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
+    POHMELFS.
 
   [ Ben Hutchings ]
   * Remove firmware from driver/staging (closes: #521553)
