--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,7 +18,7 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
     USB_SERIAL_SYMBOL, ISL29003, SERIAL_MAX3100, VIDEO_HDPVR, VIDEO_CX231XX,
     DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085, LEDS_BD2802,
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
-    POHMELFS, FSCACHE.
+    POHMELFS, FSCACHE, CACHEFILES.
 
   [ Ben Hutchings ]
   * Remove firmware from driver/staging (closes: #521553)
