--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
     POHMELFS, FSCACHE, CACHEFILES, EXOFS, NFS_FSCACHE, AFS_FSCACHE.
   * [x86] set new DELL_WMI.
+  * [x86_64] set new CRYPTO_AES_NI_INTEL.
 
   [ Ben Hutchings ]
   * Remove firmware from driver/staging (closes: #521553)
