--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,7 +19,7 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
     DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085, LEDS_BD2802,
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
     POHMELFS, FSCACHE, CACHEFILES, EXOFS, NFS_FSCACHE, AFS_FSCACHE.
-  * [x86] set new DELL_WMI.
+  * [x86] set new DELL_WMI, EDAC_AMD8131.
   * [x86_64] set new CRYPTO_AES_NI_INTEL.
 
   [ Ben Hutchings ]
