--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (2.6.30~rc4-1) UNRELEASED; urgency=low
+
+  * New upstream version.
+
+ -- Bastian Blank <waldi@debian.org>  Tue, 05 May 2009 12:34:41 +0200
+
 linux-kbuild-2.6 (2.6.29-1) unstable; urgency=low
 
   * New upstream version. 
