topconfig enable PAT
was disabled for lenny due beeing crashy at first,
but should have stabilised since.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13578 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,7 +20,7 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
     POHMELFS, FSCACHE, CACHEFILES, EXOFS, NFS_FSCACHE, AFS_FSCACHE,
     MTD_NAND_NANDSIM.
-  * [x86] set new DELL_WMI, EDAC_AMD8131, EDAC_AMD8111.
+  * [x86] set new DELL_WMI, EDAC_AMD8131, EDAC_AMD8111, X86_PAT.
   * [x86_64] set new CRYPTO_AES_NI_INTEL.
 
   [ Ben Hutchings ]
