Newer standard version without changes
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13585 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -22,6 +22,7 @@ linux-2.6 (2.6.30~rc4-1~experimental.1) UNRELEASED; urgency=low
     MTD_NAND_NANDSIM.
   * [x86] set new DELL_WMI, EDAC_AMD8131, EDAC_AMD8111, X86_PAT, DMAR.
   * [x86_64] set new CRYPTO_AES_NI_INTEL.
+  * Newer Standards-Version 3.8.1 without changes.
 
   [ Ben Hutchings ]
   * Remove firmware from driver/staging (closes: #521553)
