--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,8 +1,9 @@
-linux-modules-extra-2.6 (2.6.29-4) UNRELEASED; urgency=low
+linux-modules-extra-2.6 (2.6.29-4) unstable; urgency=low
 
   * Removing atl2, module went mainline.
+  * Bumping to abiname 2.6.29-2.
 
- -- Daniel Baumann <daniel@debian.org>  Thu, 23 Apr 2009 13:48:00 +0200
+ -- Daniel Baumann <daniel@debian.org>  Mon, 11 May 2009 13:07:00 +0200
 
 linux-modules-extra-2.6 (2.6.29-3) unstable; urgency=low
 
