[arm/iop32x, arm/ixp4xx, arm/orion5x] Turn off BOOT_TRACER, BLK_DEV_IO_TRACE, CONTEXT_SWITCH_TRACER, ARM_UNWIND and SECURITY_SELINUX because of size constraints.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13608 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -32,6 +32,9 @@ linux-2.6 (2.6.30~rc5-1~experimental.1) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * [mipsel/r5k-cobalt] Enable SCSI_SYM53C8XX_2 (closes: #526836).
+  * [arm/iop32x, arm/ixp4xx, arm/orion5x] Turn off BOOT_TRACER,
+    BLK_DEV_IO_TRACE, CONTEXT_SWITCH_TRACER, ARM_UNWIND and
+    SECURITY_SELINUX because of size constraints.
 
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
