[armel/kirkwood] Add CPU idle driver (Rabeeh Khoury)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13609 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -35,6 +35,7 @@ linux-2.6 (2.6.30~rc5-1~experimental.1) UNRELEASED; urgency=low
   * [arm/iop32x, arm/ixp4xx, arm/orion5x] Turn off BOOT_TRACER,
     BLK_DEV_IO_TRACE, CONTEXT_SWITCH_TRACER, ARM_UNWIND and
     SECURITY_SELINUX because of size constraints.
+  * [armel/kirkwood] Add CPU idle driver (Rabeeh Khoury)
 
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
