There is a platform PATA driver for SWARM IDE these days, so disable IDE and build in ATA, SCSI and BLK_DEV_SD.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13610 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -36,6 +36,9 @@ linux-2.6 (2.6.30~rc5-1~experimental.1) UNRELEASED; urgency=low
     BLK_DEV_IO_TRACE, CONTEXT_SWITCH_TRACER, ARM_UNWIND and
     SECURITY_SELINUX because of size constraints.
   * [armel/kirkwood] Add CPU idle driver (Rabeeh Khoury)
+  * [mips/sb1-bcm91250a, mipsel/sb1-bcm91250a] There is a platform PATA
+    driver for SWARM IDE these days, so disable IDE and build in ATA,
+    SCSI and BLK_DEV_SD.
 
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
