* [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=yy, it is needed     on the build daemons.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13625 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -41,6 +41,10 @@ linux-2.6 (2.6.30~rc5-1~experimental.1) UNRELEASED; urgency=low
   * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in SB1250_MAC.
   * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in BROADCOM_PHY.
 
+  [ Aurelien Jarno ]
+  * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=yy, it is needed
+    on the build daemons.
+
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
 linux-2.6 (2.6.29-2) unstable; urgency=low
