--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -38,8 +38,8 @@ linux-2.6 (2.6.30~rc5-1~experimental.1) UNRELEASED; urgency=low
   * [armel/kirkwood] Add CPU idle driver (Rabeeh Khoury)
   * [mips/sb1-bcm91250a] There is a platform PATA driver for SWARM IDE
     these days, so disable IDE and build in ATA, SCSI and BLK_DEV_SD.
-  * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in SB1250_MAC.
-  * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in BROADCOM_PHY.
+  * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in SB1250_MAC and
+    BROADCOM_PHY.
 
   [ Aurelien Jarno ]
   * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=yy, it is needed
