--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -42,7 +42,7 @@ linux-2.6 (2.6.30~rc5-1~experimental.1) UNRELEASED; urgency=low
     BROADCOM_PHY.
 
   [ Aurelien Jarno ]
-  * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=yy, it is needed
+  * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=y, it is needed
     on the build daemons.
 
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
