--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -45,6 +45,9 @@ linux-2.6 (2.6.30~rc6-1~experimental.1) UNRELEASED; urgency=low
   * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=y, it is needed
     on the build daemons.
 
+  [ Bastian Blank ]
+  * [x86] Disable X86_PPRO_FENCE.
+
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
 linux-2.6 (2.6.29-5) unstable; urgency=low
