* debian/changelog: Update. * debian/config/kernelarch-x86/config-arch-32: Enable X86_BIGSMP.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13654 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -46,7 +46,8 @@ linux-2.6 (2.6.30~rc6-1~experimental.1) UNRELEASED; urgency=low
     on the build daemons.
 
   [ Bastian Blank ]
-  * [x86] Disable X86_PPRO_FENCE.
+  * [i386] Disable PentiumPro errata workaround.
+  * [i386] Enable support for big SMP systems.
 
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
