topconfig set STRIP_ASM_SYMS
defaults to no, but seems useful and also seen enabled on fedora.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13673 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,7 +19,7 @@ linux-2.6 (2.6.30~rc7-1~experimental.1) UNRELEASED; urgency=low
     DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085, LEDS_BD2802,
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
     POHMELFS, FSCACHE, CACHEFILES, EXOFS, NFS_FSCACHE, AFS_FSCACHE,
-    MTD_NAND_NANDSIM.
+    MTD_NAND_NANDSIM, STRIP_ASM_SYMS.
   * [x86] set new DELL_WMI, EDAC_AMD8131, EDAC_AMD8111, X86_PAT, DMAR.
   * [x86_64] set new CRYPTO_AES_NI_INTEL.
   * Newer Standards-Version 3.8.1 without changes.
