topconfig enable modular USB_NET_CDC_EEM
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13677 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,7 +19,7 @@ linux-2.6 (2.6.30~rc7-1~experimental.1) UNRELEASED; urgency=low
     DRAGONRISE_FF, LEDS_LP5521, LEDS_DAC124S085, LEDS_BD2802,
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
     POHMELFS, FSCACHE, CACHEFILES, EXOFS, NFS_FSCACHE, AFS_FSCACHE,
-    MTD_NAND_NANDSIM, STRIP_ASM_SYMS, FCOE_FNIC.
+    MTD_NAND_NANDSIM, STRIP_ASM_SYMS, FCOE_FNIC, USB_NET_CDC_EEM.
   * [x86] set new DELL_WMI, EDAC_AMD8131, EDAC_AMD8111, X86_PAT, DMAR,
     X86_CPU_DEBUG.
   * [x86_64] set new CRYPTO_AES_NI_INTEL, X86_X2APIC.
