--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -50,6 +50,10 @@ linux-2.6 (2.6.30~rc7-1~experimental.1) UNRELEASED; urgency=low
   * [i386] Disable PentiumPro errata workaround.
   * [i386] Enable support for big SMP systems.
 
+  [ dann frazier ]
+  * Enable bnx2x, using firmware-split patches from net-next and mirroring
+    the per-subarch config settings used for bnx2
+
  -- maximilian attems <maks@debian.org>  Mon, 30 Mar 2009 14:40:26 +0200
 
 linux-2.6 (2.6.29-5) unstable; urgency=low
