--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,7 +20,7 @@ linux-2.6 (2.6.30~rc7-1~experimental.1) UNRELEASED; urgency=low
     UIO_AEC, CRYPTO_ZLIB, REGULATOR_FIXED_VOLTAGE, NOP_USB_XCEIV,
     POHMELFS, FSCACHE, CACHEFILES, EXOFS, NFS_FSCACHE, AFS_FSCACHE,
     MTD_NAND_NANDSIM, STRIP_ASM_SYMS, FCOE_FNIC, USB_NET_CDC_EEM,
-    PCI_IOV.
+    PCI_IOV, ASYNC_TX_DMA.
   * [x86] set new DELL_WMI, EDAC_AMD8131, EDAC_AMD8111, X86_PAT, DMAR,
     X86_CPU_DEBUG.
   * [x86_64] set new CRYPTO_AES_NI_INTEL, X86_X2APIC.
