changelog add bug closure
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13707 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (2.6.30~rc7-1~experimental.1) UNRELEASED; urgency=low
     - radeonfb: suspend/resume for ATI Mobility Radeon RV350.
     (closes: #506964)
     - tcp: fix MSG_PEEK race check (closes: #513695)
+    - e100 fixes (closes: #527056)
 
   [ maximilian attems ]
   * [sparc] Enable BLK_DEV_CRYPTOLOOP. (closes: #521829)
