--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.30~rc7-1~experimental.1) UNRELEASED; urgency=low
     (closes: #506964)
     - tcp: fix MSG_PEEK race check (closes: #513695)
     - e100 fixes (closes: #527056)
+    - mos7840: fix miscalculation of minor numbers (closes: #498293)
 
   [ maximilian attems ]
   * [sparc] Enable BLK_DEV_CRYPTOLOOP. (closes: #521829)
