--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -40,7 +40,6 @@ linux-2.6 (2.6.30~rc8-1~experimental.1) UNRELEASED; urgency=low
   * [arm/iop32x, arm/ixp4xx, arm/orion5x] Turn off BOOT_TRACER,
     BLK_DEV_IO_TRACE, CONTEXT_SWITCH_TRACER, ARM_UNWIND and
     SECURITY_SELINUX because of size constraints.
-  * [armel/kirkwood] Add CPU idle driver (Rabeeh Khoury)
   * [mips/sb1-bcm91250a] There is a platform PATA driver for SWARM IDE
     these days, so disable IDE and build in ATA, SCSI and BLK_DEV_SD.
   * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in SB1250_MAC and
@@ -48,6 +47,7 @@ linux-2.6 (2.6.30~rc8-1~experimental.1) UNRELEASED; urgency=low
   * Add patches from git.marvell.com:
     - alternative copy_to_user: more precise fallback threshold
     - lower overhead with alternative copy_to_user for small copies
+    - Kirkwood: Add CPU idle driver
 
   [ Aurelien Jarno ]
   * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=y, it is needed
