Kirkwood: clock gating for unused peripherals
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13723 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -48,6 +48,7 @@ linux-2.6 (2.6.30~rc8-1~experimental.1) UNRELEASED; urgency=low
     - alternative copy_to_user: more precise fallback threshold
     - lower overhead with alternative copy_to_user for small copies
     - Kirkwood: Add CPU idle driver
+    - Kirkwood: clock gating for unused peripherals
 
   [ Aurelien Jarno ]
   * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=y, it is needed
