--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -45,6 +45,9 @@ linux-2.6 (2.6.30~rc8-1~experimental.1) UNRELEASED; urgency=low
     these days, so disable IDE and build in ATA, SCSI and BLK_DEV_SD.
   * [mips/sb1-bcm91250a, mips/sb1a-bcm91480b] Compile in SB1250_MAC and
     BROADCOM_PHY.
+  * [mips/r4k-ip22] Enable NET_ISA and various ISA network modules on
+    the request of Damian Dimmich since they might be useful on the
+    SGI Indigo2.
   * Add patches from git.marvell.com:
     - alternative copy_to_user: more precise fallback threshold
     - lower overhead with alternative copy_to_user for small copies
