--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.30~rc8-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
     - radeonfb: suspend/resume for ATI Mobility Radeon RV350.
