* debian/changelog: Update. * debian/config/alpha/config, debian/config/amd64/config,   debian/config/i386/config, debian/config/ia64/config: Disable SOUND_PRIME.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13756 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -61,6 +61,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * [i386] Disable PentiumPro errata workaround.
   * [i386] Enable support for big SMP systems.
+  * Disable OSS.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
