* debian/changelog: Update. * debian/config: Centralize sound core.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13761 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -64,6 +64,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * Disable OSS.
   * [s390] Use Sparse Memory layout.
   * [amd64, i386, powerpc, sparc] Make IPv6 support built-in.
+  * Centralize sound sound options.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
