--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -65,6 +65,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * [s390] Use Sparse Memory layout.
   * [amd64, i386, powerpc, sparc] Make IPv6 support built-in.
   * Centralize sound sound options.
+  * Centralize Power Management options.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
