--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -66,6 +66,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * [amd64, i386, powerpc, sparc] Make IPv6 support built-in.
   * Centralize sound sound options.
   * Centralize Power Management options.
+  * [sparc] Enable CPU Frequency scaling.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
