debian/changelog: Update.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13775 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -64,8 +64,9 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * Disable OSS.
   * [s390] Use Sparse Memory layout.
   * [amd64, i386, powerpc, sparc] Make IPv6 support built-in.
-  * Centralize sound sound options.
+  * Centralize Sound core options.
   * Centralize Power Management options.
+  * Centralize CPU Frequency scaling options.
   * [sparc] Enable CPU Frequency scaling.
 
   [ dann frazier ]
