--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -68,6 +68,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * Centralize Power Management options.
   * Centralize CPU Frequency scaling options.
   * [sparc] Enable CPU Frequency scaling.
+  * Enable Network console logging support.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
