debian/changelog: Update.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13784 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -69,6 +69,8 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * Centralize CPU Frequency scaling options.
   * [sparc] Enable CPU Frequency scaling.
   * Enable Network console logging support.
+  * [s390/s390x-tape] Add image.
+  * [s390/s390, s390/s390-tape] Remove images.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
