--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -72,6 +72,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * [s390/s390x-tape] Add image.
   * [s390/s390, s390/s390-tape] Remove images.
   * [i386/486] Enable High Memory Support.
+  * [i386] Allocate pagetables from High Memory.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
