--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-nonfree-2.6 (2.6.29-3) unstable; urgency=low
+
+  * Triggering rebuild, a couple of modules went out of sync over time.
+
+ -- Daniel Baumann <daniel@debian.org>  Fri, 12 Jun 2009 20:43:00 +0200
+
 linux-modules-nonfree-2.6 (2.6.29-2) unstable; urgency=low
 
   * Bumping to abiname 2.6.29-2.
