--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -75,6 +75,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * [i386] Allocate pagetables from High Memory.
   * [amd64, i386] Write protect kernel read-only data structures.
   * [amd64, i386] Make kernel relocatable.
+  * Move images and headers into kernel section.
 
   [ dann frazier ]
   * Enable bnx2x, using firmware-split patches from net-next and mirroring
