changelog add bug closure for bluetooth
fix got backported to 2.6.29.4, confirmed fixed there.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13804 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
     - e100 fixes (closes: #527056)
     - mos7840: fix miscalculation of minor numbers (closes: #498293)
     - reiserfs update (closes: #531804)
+    - bluetooth stack suspend/resume (closes: #508426, #529785)
 
   [ maximilian attems ]
   * [sparc] Enable BLK_DEV_CRYPTOLOOP. (closes: #521829)
