xfs: fix freeing memory in xfs_getbmap()
add patch for xfs regression, landed no in linus
and just applies to 2.6.30.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13805 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -30,6 +30,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
     X86_CPU_DEBUG.
   * [x86_64] set new CRYPTO_AES_NI_INTEL, X86_X2APIC.
   * Newer Standards-Version 3.8.1 without changes.
+  * [xfs] fix freeing memory in xfs_getbmap().
 
   [ Ben Hutchings ]
   * Remove firmware from driver/staging (closes: #521553)
