Note that #524699 (e1000e: random kernel oopses) was fixed upstream
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13810 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,6 +8,8 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
     - mos7840: fix miscalculation of minor numbers (closes: #498293)
     - reiserfs update (closes: #531804)
     - bluetooth stack suspend/resume (closes: #508426, #529785)
+    - e1000e: Remove mutex_trylock and associated WARN on failure
+      (closes: #524699)
 
   [ maximilian attems ]
   * [sparc] Enable BLK_DEV_CRYPTOLOOP. (closes: #521829)
