Spelling and formatting fix to current log entry
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13811 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,7 +2,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
     - radeonfb: suspend/resume for ATI Mobility Radeon RV350.
-    (closes: #506964)
+      (closes: #506964)
     - tcp: fix MSG_PEEK race check (closes: #513695)
     - e100 fixes (closes: #527056)
     - mos7840: fix miscalculation of minor numbers (closes: #498293)
@@ -35,7 +35,7 @@ linux-2.6 (2.6.30-1~experimental.1) UNRELEASED; urgency=low
   * [xfs] fix freeing memory in xfs_getbmap().
 
   [ Ben Hutchings ]
-  * Remove firmware from driver/staging (closes: #521553)
+  * Remove firmware from drivers/staging (closes: #521553)
     - make rt2860sta and rt2870sta use request_firmware(),
       thanks to Darren Salt
   * Remove some sourceless firmware not included in Debian kernel images
