--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-modules-extra-2.6 (2.6.30-1) UNRELEASED; urgency=low
+
+  * Updating kernel version to 2.6.30-1.
+  * Removing nilfs2, mainlined with 2.6.30.
+
+ -- Daniel Baumann <daniel@debian.org>  Mon, 15 Jun 2009 10:22:00 +0200
+
 linux-modules-extra-2.6 (2.6.29-5) unstable; urgency=low
 
   * Triggering rebuild, a couple of modules went out of sync over time.
