--- a/linux-modules-contrib-2.6/debian/changelog
+++ b/linux-modules-contrib-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-modules-contrib-2.6 (2.6.30-1) UNRELEASED; urgency=low
+
+  * Updating kernel version to 2.6.30-1.
+  * Removing rt73, driver was rewritten in 2.6.30 mainline.
+
+ -- Daniel Baumann <daniel@debian.org>  Mon, 15 Jun 2009 10:22:00 +0200
+
 linux-modules-contrib-2.6 (2.6.29-1) unstable; urgency=medium
 
   * Re-enabling rt73 on vserver.
