debian/changelog: Prepare to release (2.6.30-1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13835 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,8 +1,8 @@
-linux-kbuild-2.6 (2.6.30-1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.30-1) unstable; urgency=low
 
   * New upstream version.
 
- -- Bastian Blank <waldi@debian.org>  Tue, 05 May 2009 12:34:41 +0200
+ -- Bastian Blank <waldi@debian.org>  Wed, 17 Jun 2009 16:49:57 +0200
 
 linux-kbuild-2.6 (2.6.29-1) unstable; urgency=low
 
