--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.30-1~experimental.2) UNRELEASED; urgency=low
+
+  * [powerpc64] Enable modular RTC_DRV_PS3.
+
+ -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
+
 linux-2.6 (2.6.30-1) unstable; urgency=low
 
   * New upstream release.
