--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,6 @@
 linux-2.6 (2.6.30-1~experimental.2) UNRELEASED; urgency=low
 
-  * [powerpc64] Enable modular RTC_DRV_PS3.
+  * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
 
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
