Remove PHY firmware blobs from cxgb3
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13849 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.31~rc1-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
+  * cxgb3: remove PHY firmware
 
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
