--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,10 @@ linux-2.6 (2.6.31~rc1-1~experimental.1) UNRELEASED; urgency=low
   * mga: remove unnecessary change from firmware-loading patch
   * cxgb3: remove PHY firmware
 
+  [ Martin Michlmayr ]
+  * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
+    platforms have been converted to GPIOLIB.
+
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
 linux-2.6 (2.6.30-1) unstable; urgency=low
