--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (2.6.31~rc1-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.31~rc2-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release.
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
