topconfig set modular SND_CTXFI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13871 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,7 +4,7 @@ linux-2.6 (2.6.31~rc2-1~experimental.1) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
-  * Set new NETFILTER_XT_MATCH_OSF, FIREWIRE_NET.
+  * Set new NETFILTER_XT_MATCH_OSF, FIREWIRE_NET, SND_CTXFI.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
