--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,7 +5,7 @@ linux-2.6 (2.6.31~rc2-1~experimental.1) UNRELEASED; urgency=low
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
   * Set new NETFILTER_XT_MATCH_OSF, FIREWIRE_NET, SND_CTXFI, USB_XHCI_HCD,
-    IEEE802154, CAN_DEV.
+    IEEE802154, CAN_DEV, EEPROM_MAX6875.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
 
   [ Ben Hutchings ]
