- support for W83627DHG-P (closes: #535646).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13879 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-2.6 (2.6.31~rc2-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - support for W83627DHG-P (closes: #535646).
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
@@ -81,6 +82,7 @@ linux-2.6 (2.6.30-1) unstable; urgency=low
   [ Aurelien Jarno ]
   * [mips(el)/sb1-bcm91250a] Set CONFIG_SCSI_AIC7XXX=y, it is needed
     on the build daemons.
+  * topconfig set CONFIG_RD_GZIP, CONFIG_RD_BZIP2, CONFIG_RD_LZMA.
 
   [ Bastian Blank ]
   * [i386] Disable PentiumPro errata workaround.
