--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,7 +7,8 @@ linux-2.6 (2.6.31~rc2-1~experimental.1) UNRELEASED; urgency=low
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
   * Set new NETFILTER_XT_MATCH_OSF, FIREWIRE_NET, SND_CTXFI, USB_XHCI_HCD,
     IEEE802154, CAN_DEV, EEPROM_MAX6875, DM_LOG_USERSPACE, DM_MULTIPATH_QL,
-    DM_MULTIPATH_ST, LIBERTAS_SPI.
+    DM_MULTIPATH_ST, LIBERTAS_SPI, CAN_SJA1000, CAN_SJA1000_PLATFORM,
+    CAN_EMS_PCI, CAN_KVASER_PCI.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
 
   [ Ben Hutchings ]
