--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,7 +14,7 @@ linux-2.6 (2.6.31~rc2-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
-  * cxgb3: remove PHY firmware
+  * cxgb3: remove PHY firmware and use request_firmware() to load it
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
