--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,7 +9,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
     IEEE802154, CAN_DEV, EEPROM_MAX6875, DM_LOG_USERSPACE, DM_MULTIPATH_QL,
     DM_MULTIPATH_ST, LIBERTAS_SPI, CAN_SJA1000, CAN_SJA1000_PLATFORM,
     CAN_EMS_PCI, CAN_KVASER_PCI, CB710_CORE, CNIC, RT2800USB,
-    USB_NET_INT51X1, SND_LX6464ES, BLK_DEV_OSD, SCSI_BNX2_ISCSI.
+    USB_NET_INT51X1, SND_LX6464ES, BLK_DEV_OSD, SCSI_BNX2_ISCSI, IWM.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
 
   [ Ben Hutchings ]
