--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,7 +12,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
     USB_NET_INT51X1, SND_LX6464ES, BLK_DEV_OSD, SCSI_BNX2_ISCSI, IWM,
     IEEE802154_DRIVERS, TOUCHSCREEN_EETI, TOUCHSCREEN_W90X900,
     BATTERY_MAX17040, SENSORS_TMP401, REGULATOR_USERSPACE_CONSUMER,
-    REGULATOR_MAX1586, REGULATOR_LP3971, MEDIA_SUPPORT.
+    REGULATOR_MAX1586, REGULATOR_LP3971, MEDIA_SUPPORT, CUSE.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
 
   [ Ben Hutchings ]
