--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-modules-nonfree-2.6 (2.6.30-1) UNRELEASED; urgency=low
 
   * Updating kernel version to 2.6.30-1.
+  * Adding broadcom-sta.
 
  -- Daniel Baumann <daniel@debian.org>  Mon, 15 Jun 2009 10:22:00 +0200
 
