--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
   * cxgb3: remove PHY firmware and use request_firmware() to load it
+  * Add firmware-linux-free package containing DFSG-free firmware
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
