Do not remove av7110 firmware since it is DFSG-free
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13937 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   * mga: remove unnecessary change from firmware-loading patch
   * cxgb3: remove PHY firmware and use request_firmware() to load it
   * Add firmware-linux-free package containing DFSG-free firmware
+  * av7110: include firmware source and binary
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
