topconfig enable modular LEDS_LP3944
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13943 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,7 +14,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
     BATTERY_MAX17040, SENSORS_TMP401, REGULATOR_USERSPACE_CONSUMER,
     REGULATOR_MAX1586, REGULATOR_LP3971, MEDIA_SUPPORT, CUSE,
     WL12XX, PPS, AB3100_CORE, SND_HDA_INPUT_JACK,MMC_SDHCI_PLTFM,
-    MMC_CB710, MMC_VIA_SDMMC.
+    MMC_CB710, MMC_VIA_SDMMC, LEDS_LP3944.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
 
   [ Ben Hutchings ]
