--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
     WL12XX, PPS, AB3100_CORE, SND_HDA_INPUT_JACK,MMC_SDHCI_PLTFM,
     MMC_CB710, MMC_VIA_SDMMC, LEDS_LP3944, RTC_DRV_RX8025.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
+  * [x86_64] Enable HW_RANDOM_VIA.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
