--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -29,6 +29,9 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
     platforms have been converted to GPIOLIB.
 
+  [ Bastian Blank ]
+  * Disable staging drivers by default.
+
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
 linux-2.6 (2.6.30-1) unstable; urgency=low
