--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -32,6 +32,9 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Disable staging drivers by default.
 
+  [ Moritz Muehlenhoff ]
+  * Fix Linus' name in copyright file (Closes: #530620)
+
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
 linux-2.6 (2.6.30-1) unstable; urgency=low
