--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
     SMARTJOYPLUS_FF.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
   * [x86_64] Enable HW_RANDOM_VIA.
+  * [x86] Keep divers staging stuff enabled.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
