staging has with rtl8192su another firmware blob without license
nuke it and disable the driver

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13965 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   * [x86_64] Enable HW_RANDOM_VIA.
   * [x86] Keep divers staging stuff enabled.
   * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS.
+  * rtl8192su: remove firmware and disable.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
