--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,7 +19,7 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   * Disable v4l1 ov511 and quickcam_messenger drivers.
   * [x86_64] Enable HW_RANDOM_VIA.
   * [x86] Keep divers staging stuff enabled.
-  * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS.
+  * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS, ACERHDF.
   * rtl8192su: remove firmware and disable.
 
   [ Ben Hutchings ]
