Syncing open-vm copyright file.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13973 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-modules-contrib-2.6/debian/changelog
+++ b/linux-modules-contrib-2.6/debian/changelog
@@ -2,6 +2,7 @@ linux-modules-contrib-2.6 (2.6.30-1) UNRELEASED; urgency=low
 
   * Updating kernel version to 2.6.30-1.
   * Removing rt73, driver was rewritten in 2.6.30 mainline.
+  * Syncing open-vm copyright file.
 
  -- Daniel Baumann <daniel@debian.org>  Mon, 15 Jun 2009 10:22:00 +0200
 
