n_tty: Fix echo race
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13989 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -38,6 +38,9 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   [ Moritz Muehlenhoff ]
   * Fix Linus' name in copyright file (Closes: #530620)
 
+  [ dann frazier ]
+  * n_tty: Fix echo race
+
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
 linux-2.6 (2.6.30-1) unstable; urgency=low
