Patch has been merged in 2.6.31: - Remove incorrect ACPI blacklisting of ASUS P4B266 mainboards   (Closes: #525625)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13995 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,8 @@ linux-2.6 (2.6.31~rc3-1~experimental.1) UNRELEASED; urgency=low
   * New upstream release.
     - support for W83627DHG-P (closes: #535646).
     - Fixed MAC change operations on Orinoco (Closes: #536455)
+    - Remove incorrect ACPI blacklisting of ASUS P4B266 mainboards
+      (Closes: #525625)	 
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
