--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,7 +18,7 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
     REGULATOR_MAX1586, REGULATOR_LP3971, MEDIA_SUPPORT, CUSE,
     WL12XX, PPS, AB3100_CORE, SND_HDA_INPUT_JACK,MMC_SDHCI_PLTFM,
     MMC_CB710, MMC_VIA_SDMMC, LEDS_LP3944, RTC_DRV_RX8025,
-    SMARTJOYPLUS_FF.
+    SMARTJOYPLUS_FF, USB_CDC_PHONET.
   * Disable v4l1 ov511 and quickcam_messenger drivers.
   * [x86_64] Enable HW_RANDOM_VIA.
   * [x86] Keep divers staging stuff enabled.
