add a changelog entries for the cleanups.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14032 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -25,6 +25,8 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS, ACERHDF, EDAC_AMD64.
   * rtl8192su: remove firmware and disable.
   * Newer Standards-Version 3.8.2 without changes.
+  * Allow install in chroot without do_initrd check for piuparts.
+  * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
