--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,7 +2,8 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release.
     - support for W83627DHG-P (closes: #535646).
-    - Fixed MAC change operations on Orinoco (Closes: #536455)
+    - Restore MAC address and MTU change operations on Orinoco and others
+      (Closes: #536455)
     - Remove incorrect ACPI blacklisting of ASUS P4B266 mainboards
       (Closes: #525625)	 
 
