mention difference between Alpha flavours
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14037 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -44,6 +44,8 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
 
   [ Moritz Muehlenhoff ]
   * Fix Linus' name in copyright file (Closes: #530620)
+  * More verbose explanation on difference between Alpha flavour
+    (Closes: #497230)
 
   [ dann frazier ]
   * n_tty: Fix echo race
