--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,7 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
       (Closes: #536455)
     - Remove incorrect ACPI blacklisting of ASUS P4B266 mainboards
       (Closes: #525625)	 
+    - atl1c fixes for Eee PC model 1005HA-H. (closes: #538410)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
