--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (2.6.31~rc4-1) UNRELEASED; urgency=low
+
+  * New upstream version.
+
+ -- Bastian Blank <waldi@debian.org>  Sat, 25 Jul 2009 11:46:23 +0200
+
 linux-kbuild-2.6 (2.6.30-1) unstable; urgency=low
 
   * New upstream version.
