--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-modules-extra-2.6 (2.6.30-2) unstable; urgency=low
 
   * Disabling aufs on armel, currently FTBFS.
+  * Disabling drbd8, currently package is not installable.
 
  -- Daniel Baumann <daniel@debian.org>  Wed, 29 Jul 2009 22:54:00 +0200
 
