--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-extra-2.6 (2.6.30-3) UNRELEASED; urgency=low
+
+  * Removing drbd8, no maintainer support anymore (see #539219).
+
+ -- Daniel Baumann <daniel@debian.org>  Wed, 29 Jul 2009 22:54:00 +0200
+
 linux-modules-extra-2.6 (2.6.30-2) unstable; urgency=low
 
   * Disabling aufs on armel, currently FTBFS.
