Re-enabling aufs, should work now with linux-2.6 2.6.30-4.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14049 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-modules-extra-2.6 (2.6.30-3) UNRELEASED; urgency=low
 
   * Removing drbd8, no maintainer support anymore (see #539219).
+  * Re-enabling aufs, should work now with linux-2.6 2.6.30-4.
 
  -- Daniel Baumann <daniel@debian.org>  Wed, 29 Jul 2009 22:54:00 +0200
 
