--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -29,6 +29,7 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
   * Newer Standards-Version 3.8.2 without changes.
   * Allow install in chroot without do_initrd check for piuparts.
   * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
+  * Disable DEVKMEM.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
