--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -24,7 +24,8 @@ linux-2.6 (2.6.31~rc4-1~experimental.1) UNRELEASED; urgency=low
   * Disable v4l1 ov511 and quickcam_messenger drivers.
   * [x86_64] Enable HW_RANDOM_VIA.
   * [x86] Keep divers staging stuff enabled.
-  * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS, ACERHDF, EDAC_AMD64.
+  * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS, ACERHDF, EDAC_AMD64,
+    CC_STACKPROTECTOR.
   * rtl8192su: remove firmware and disable.
   * Newer Standards-Version 3.8.2 without changes.
   * Allow install in chroot without do_initrd check for piuparts.
