x86 set DEFAULT_MMAP_MIN_ADDR=65536
value is helpful stopping "NULL dereference" attacks,
arm wants a 32k here.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14071 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -26,7 +26,7 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
   * [x86_64] Enable HW_RANDOM_VIA.
   * [x86] Keep divers staging stuff enabled.
   * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS, ACERHDF, EDAC_AMD64,
-    CC_STACKPROTECTOR.
+    CC_STACKPROTECTOR, DEFAULT_MMAP_MIN_ADDR=65536.
   * rtl8192su: remove firmware and disable.
   * Newer Standards-Version 3.8.2 without changes.
   * Allow install in chroot without do_initrd check for piuparts.
