disable oldstyle pc speaker driver
as we now have one under alsa.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14080 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -33,6 +33,7 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
   * Allow install in chroot without do_initrd check for piuparts.
   * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
   * Disable DEVKMEM.
+  * Disable INPUT_PCSPKR as replaced by snd-pcsp.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
