--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -55,6 +55,8 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
 
   [ dann frazier ]
   * n_tty: Fix echo race
+  * [ia64] Stop disabling CONFIG_HOTPLUG_CPU, which was blocking
+    CONFIG_KEXEC from being enabled
 
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
