changelog add another bug closure
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14084 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,7 +7,9 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
     - Remove incorrect ACPI blacklisting of ASUS P4B266 mainboards
       (Closes: #525625)	 
     - atl1c fixes for Eee PC model 1005HA-H. (closes: #538410)
-    -  parisc64-smp boot fix on J5600. (closes: #539369)
+    - parisc64-smp boot fix on J5600. (closes: #539369)
+    - parisc: Fix GOT overflow during module load on 64bit kernel
+      (closes: #539378)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
