--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,9 +1,9 @@
-linux-modules-extra-2.6 (2.6.30-3) UNRELEASED; urgency=low
+linux-modules-extra-2.6 (2.6.30-3) unstable; urgency=low
 
   * Removing drbd8, no maintainer support anymore (see #539219).
   * Re-enabling aufs, should work now with linux-2.6 2.6.30-4.
 
- -- Daniel Baumann <daniel@debian.org>  Wed, 29 Jul 2009 22:54:00 +0200
+ -- Daniel Baumann <daniel@debian.org>  Fri,  7 Aug 2009 20:11:24 +0200
 
 linux-modules-extra-2.6 (2.6.30-2) unstable; urgency=low
 
