--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -35,6 +35,7 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
   * Allow install in chroot without do_initrd check for piuparts.
   * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
   * Disable DEVKMEM.
+  * [ppc, sparc] Enable EFI_PARTITION. (closes: #540486)
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
