--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -28,7 +28,7 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
   * [x86_64] Enable HW_RANDOM_VIA.
   * [x86] Keep divers staging stuff enabled.
   * [x86] Enable RT3070, COMEDI_PCMCIA_DRIVERS, ACERHDF, EDAC_AMD64,
-    XEN_DEV_EVTCHN, XEN_SYS_HYPERVISOR,
+    XEN_DEV_EVTCHN, XEN_SYS_HYPERVISOR, PERF_COUNTERS,
     CC_STACKPROTECTOR, DEFAULT_MMAP_MIN_ADDR=65536.
   * rtl8192su: remove firmware and disable.
   * Newer Standards-Version 3.8.2 without changes.
