xfs inode handling fixed in current git
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14097 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,8 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
     - parisc64-smp boot fix on J5600. (closes: #539369)
     - parisc: Fix GOT overflow during module load on 64bit kernel
       (closes: #539378)
+    - xfs: fix freeing of inodes not yet added to the inode cache
+      (Closes: #527517)	
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
