--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,7 @@ linux-2.6 (2.6.31~rc5-1~experimental.1) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
+    (Closes: #528694)	
   * Set new NETFILTER_XT_MATCH_OSF, FIREWIRE_NET, SND_CTXFI, USB_XHCI_HCD,
     IEEE802154, CAN_DEV, EEPROM_MAX6875, DM_LOG_USERSPACE, DM_MULTIPATH_QL,
     DM_MULTIPATH_ST, LIBERTAS_SPI, CAN_SJA1000, CAN_SJA1000_PLATFORM,
