--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -45,6 +45,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * cxgb3: remove PHY firmware and use request_firmware() to load it
   * Add firmware-linux-free package containing DFSG-free firmware
   * av7110: include firmware source and binary
+  * snd-cs46xx: reenable using external firmware (closes: #464197,
+    but note that Debian cannot currently distribute the firmware)
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
