--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -46,7 +46,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * Add firmware-linux-free package containing DFSG-free firmware
   * av7110: include firmware source and binary
   * snd-cs46xx: reenable using external firmware (closes: #464197,
-    but note that Debian cannot currently distribute the firmware)
+    but note that Debian cannot currently distribute the firmware),
+    thanks to Kalle Olavi Niemitalo <kon@iki.fi>
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
