--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -48,6 +48,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * snd-cs46xx: reenable using external firmware (closes: #464197,
     but note that Debian cannot currently distribute the firmware),
     thanks to Kalle Olavi Niemitalo <kon@iki.fi>
+  * ib_ipath: remove firmware for QLogic IBA7220 and use
+    request_firmware() to load it
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
