--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -50,6 +50,7 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
     thanks to Kalle Olavi Niemitalo <kon@iki.fi>
   * ib_ipath: remove firmware for QLogic IBA7220 and use
     request_firmware() to load it
+  * dvb-usb-af9005: remove firmware and disable
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
