--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -39,6 +39,7 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
   * Disable DEVKMEM.
   * [ppc, sparc] Enable EFI_PARTITION. (closes: #540486)
+  * Disable old USB_DEVICE_CLASS.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
