Add warning on upgrade to a new upstream version where the system appears to be missing necessary firmware files (closes: #541702)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14145 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -53,6 +53,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * ib_ipath: remove firmware for QLogic IBA7220 and use
     request_firmware() to load it
   * dvb-usb-af9005: remove firmware and disable
+  * Add warning on upgrade to a new upstream version where the system
+    appears to be missing necessary firmware files (closes: #541702)
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
