changelog add a bug closure
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14146 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
       (closes: #539378)
     - xfs: fix freeing of inodes not yet added to the inode cache
       (Closes: #527517)	
+    - IPv6: add "disable" module parameter support to ipv6.ko.
+      (closes: #542470)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
