Drop yaird initramfs generator support.
yaird is not part of Lenny and has seen no progress since,
is beeing asked to be kicked out of unstable.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14147 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -43,6 +43,7 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * Disable DEVKMEM.
   * [ppc, sparc] Enable EFI_PARTITION. (closes: #540486)
   * Disable old USB_DEVICE_CLASS.
+  * Drop yaird initramfs generator support.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
