Specify a fallback PERF_COUNTER_INDEX_OFFSET for archs that don't define it
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14157 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -75,6 +75,8 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * n_tty: Fix echo race
   * [ia64] Stop disabling CONFIG_HOTPLUG_CPU, which was blocking
     CONFIG_KEXEC from being enabled
+  * Specify a fallback PERF_COUNTER_INDEX_OFFSET for archs that
+    don't define it
 
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
