* Add Vcs-Svn and Vcs-Browser stanzas pointing to the SVN branch   used for development in unstable. There are other branches   used for experimental (trunk), oldstable and stable, but Vcs-*   doesn't yet provide the ability to distinguish branches in a   more fine-grained manner. (Closes: #471495)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14159 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -70,7 +70,12 @@ linux-2.6 (2.6.31~rc6-1~experimental.1) UNRELEASED; urgency=low
   * Fix Linus' name in copyright file (Closes: #530620)
   * More verbose explanation on difference between Alpha flavour
     (Closes: #497230)
-
+  * Add Vcs-Svn and Vcs-Browser stanzas pointing to the SVN branch
+    used for development in unstable. There are other branches
+    used for experimental (trunk), oldstable and stable, but Vcs-*
+    doesn't yet provide the ability to distinguish branches in a
+    more fine-grained manner. (Closes: #471495)
+	
   [ dann frazier ]
   * n_tty: Fix echo race
   * [ia64] Stop disabling CONFIG_HOTPLUG_CPU, which was blocking
