qla1280: Release spinlock when requesting firmware (closes: #543244)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14176 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -61,6 +61,7 @@ linux-2.6 (2.6.31~rc7-1~experimental.1) UNRELEASED; urgency=low
   * dvb-usb-af9005: remove firmware and disable
   * Add warning on upgrade to a new upstream version where the system
     appears to be missing necessary firmware files (closes: #541702)
+  * qla1280: Release spinlock when requesting firmware (closes: #543244)
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
