rt{2860,2870,3070}sta: Use existing CCITT CRC implementation on firmware rather than adding an equivalent variant of ITU-T CRC
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14180 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -64,6 +64,8 @@ linux-2.6 (2.6.31~rc7-1~experimental.1) UNRELEASED; urgency=low
   * qla1280: Release spinlock when requesting firmware (closes: #543244)
   * r128: Add test for initialisation to all ioctls that require it
     (closes: #541630)
+  * rt{2860,2870,3070}sta: Use existing CCITT CRC implementation on
+    firmware rather than adding an equivalent variant of ITU-T CRC
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
