--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -45,7 +45,7 @@ linux-2.6 (2.6.31~rc7-1~experimental.1) UNRELEASED; urgency=low
   * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
   * Disable DEVKMEM.
   * [ppc, sparc] Enable EFI_PARTITION. (closes: #540486)
-  * Disable old USB_DEVICE_CLASS.
+  * Disable old USB_DEVICE_CLASS. (Closes: #510279)
   * Drop yaird initramfs generator support.
 
   [ Ben Hutchings ]
